--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,44 @@ services:
       NODE_VERSION: 20.12.2  # Node.js version
       NPM_VERSION: 10.5.0    # npm version
     restart: always
+
+  app:
+    build:
+      context: .
+    container_name: python_app
+    ports:
+      - "8000:8000"
+    environment:
+      - PYTHONDONTWRITEBYTECODE=1
+      - PYTHONUNBUFFERED=1
+      - ELASTICSEARCH_HOST=http://elasticsearch:9200
+    volumes:
+      - .:/app
+    depends_on:
+      - elasticsearch
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.0
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - "9200:9200"  # Elasticsearch port
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.9.0
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200  # Pointing to the Elasticsearch container
+    ports:
+      - "5601:5601"  # Kibana's default port
+    depends_on:
+      - elasticsearch
+
+volumes:
+  es_data:
+    driver: local
