--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     environment:
       NODE_VERSION: 20.12.2  # Node.js version
       NPM_VERSION: 10.5.0    # npm version
+      CHOKIDAR_USEPOLLING: true
+    volumes:
+      - ./elastic-eats-ui:/app
+      - /app/node_modules
     restart: always
 
   app:
