--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   frontend:
     build:
-      context: ./elastic-eats-ui  # React project folder
+      context: ./elastic-eats-ui
     ports:
-      - "5173:5173"  # Map Vite's dev server port
+      - "5173:5173"
     environment:
-      NODE_VERSION: 20.12.2  # Node.js version
-      NPM_VERSION: 10.5.0    # npm version
+      NODE_VERSION: 20.12.2
+      NPM_VERSION: 10.5.0
     restart: always
 
   app:
