--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       NODE_VERSION: 20.12.2  # Node.js version
       NPM_VERSION: 10.5.0    # npm version
     restart: always
+    networks:
+      - app-network
 
   app:
     build:
@@ -23,6 +25,8 @@ services:
       - .:/app
     depends_on:
       - elasticsearch
+    networks:
+      - app-network
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.0
@@ -35,6 +39,8 @@ services:
       - "9200:9200"  # Elasticsearch port
     volumes:
       - es_data:/usr/share/elasticsearch/data
+    networks:
+      - app-network
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.9.0
@@ -45,7 +51,13 @@ services:
       - "5601:5601"  # Kibana's default port
     depends_on:
       - elasticsearch
+    networks:
+      - app-network
 
 volumes:
   es_data:
     driver: local
+
+networks:
+    app-network:
+      driver: bridge
