--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -27,8 +25,6 @@ services:
     volumes:
       - .:/app
     depends_on:
-      # elasticsearch:
-      #   condition: service_healthy
       - elasticsearch
     networks:
       - app-network
@@ -40,13 +36,16 @@ services:
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-      - xpack.security.enabled=false
+      - xpack.security.enabled=true  # Enable security
+      - xpack.security.authc.apiKey.enabled=true
+      - ELASTICSEARCH_PASSWORD=p5FE3c=alPhGd20o14bx  # Set your password
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - network.host=0.0.0.0
     ports:
       - "9200:9200"
     volumes:
       - es_data:/usr/share/elasticsearch/data
+      - es_config:/usr/share/elasticsearch/config  # Persist config files like service tokens
     networks:
       - app-network
     healthcheck:
@@ -59,16 +58,21 @@ services:
     image: docker.elastic.co/kibana/kibana:8.9.0
     container_name: kibana
     environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200  # Pointing to the Elasticsearch container
+      - ELASTICSEARCH_SERVICE_TOKEN=AAEAAWVsYXN0aWMva2liYW5hL2tpYmFuYV90b2tlbjp1U2k0c1YwSFRMR2pUdmZfeDRQSTdR
     ports:
       - "5601:5601"
     depends_on:
       - elasticsearch
+    volumes:
+      - ./kibana.yml:/usr/share/kibana/config/kibana.yml  # Add this line
     networks:
       - app-network
 
 volumes:
   es_data:
+    driver: local
+  es_config:
     driver: local
 
 networks:
