--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       context: .
     container_name: python_app
     ports:
-      - "8000:8000"
+      - "5001:5001"
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
@@ -33,8 +33,7 @@ services:
       - elasticsearch
     networks:
       - app-network
-    entrypoint: ["/app/wait-for-elasticsearch.sh"]
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+    command: ["python", "server/server.py", "runserver", "0.0.0.0:5001"]
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.0
