auto dump json to elastic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - RECIPE_API_KEY=${RECIPE_API_KEY}  
     volumes:
       - .:/app
+      - es_data:/ES_data
     depends_on:
       - elasticsearch
     networks:
